@@ -51,19 +51,6 @@ extern int CASSETTE_record;
    situation, when switching recording on the function returns FALSE. */
 int CASSETTE_ToggleRecord(void);
 
-int CASSETTE_AddGap(int gaptime);
-void CASSETTE_LeaderLoad(void);
-void CASSETTE_LeaderSave(void);
-/* Reads a record from tape and copies its contents (max. LENGTH bytes,
-   excluding the trailing checksum) to memory starting at address DEST_ADDR.
-   Returns FALSE if number of bytes in record doesn't equal LENGTH, or
-   checksum is incorrect, or there was a read error/end of file; otherwise
-   returns TRUE. */
-int CASSETTE_ReadToMemory(UWORD dest_addr, int length);
-/* Reads LENGTH bytes from memory starting at SRC_ADDR and writes them as
-   a record (with added checksum) to tape. Returns FALSE if there was a write
-   error, TRUE otherwise. */
-int CASSETTE_WriteFromMemory(UWORD src_addr, int length);
 void CASSETTE_Seek(unsigned int position);
 int CASSETTE_IOLineStatus(void);
 int CASSETTE_GetByte(void);
@@ -74,4 +61,22 @@ void CASSETTE_TapeMotor(int onoff);
 int CASSETTE_AddScanLine(void);
 /* Reset cassette serial transmission; call when resseting POKEY by SKCTL. */
 void CASSETTE_ResetPOKEY(void);
+
+/* --- Functions used by patched SIO --- */
+/* -- SIO_Handler() -- */
+int CASSETTE_AddGap(int gaptime);
+/* Reads a record from tape and copies its contents (max. LENGTH bytes,
+   excluding the trailing checksum) to memory starting at address DEST_ADDR.
+   Returns FALSE if number of bytes in record doesn't equal LENGTH, or
+   checksum is incorrect, or there was a read error/end of file; otherwise
+   returns TRUE. */
+int CASSETTE_ReadToMemory(UWORD dest_addr, int length);
+/* Reads LENGTH bytes from memory starting at SRC_ADDR and writes them as
+   a record (with added checksum) to tape. Returns FALSE if there was a write
+   error, TRUE otherwise. */
+int CASSETTE_WriteFromMemory(UWORD src_addr, int length);
+/* -- Other -- */
+void CASSETTE_LeaderLoad(void);
+void CASSETTE_LeaderSave(void);
+
 #endif /* CASSETTE_H_ */
